--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2021"
 rocket = "0.4.11"
 rocket_contrib = { version = "0.4.11", features = ["json"] }
 serde = { version = "1.0.144", features = ["derive"] }
+reqwest = { version = "0.11", features = ["json"] }
+serde_json = "1.0"
+tokio = {version = "1.20.1", features = ["full"]}
