--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,24 @@
 [package]
 name = "rust_store"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "A quick and easy database for you to use!"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[profile.dev]
+opt-level = 2
 
+[profile.release]
+opt-level = 3
+
+[dependencies]
 rocket = "0.4.11"
 rocket_contrib = { version = "0.4.11", features = ["json"] }
 serde = { version = "1.0.144", features = ["derive"] }
 reqwest = { version = "0.11.11", features = ["json"] }
 serde_json = "1.0.85"
 tokio = {version = "1.20.1", features = ["full"]}
-better_file_maker = "0.1.6"
+better_file_maker = "0.1.7"
 txt_writer = "0.1.2"
