--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "rust_store"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 description = "A quick and easy database for you to use!"
 license = "MIT"
+repository = "https://github.com/carghai/RustStore"
+homepage = "https://carghaiwebsite.web.app/#/"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
