--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ serde_json = "1.0.85"
 tokio = {version = "1.20.1", features = ["full"]}
 better_file_maker = "0.1.8"
 txt_writer = "0.1.3"
+once_cell = "1.15.0"
