--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,5 @@ tokio = {version = "1.20.1", features = ["full"]}
 better_file_maker = "0.1.8"
 txt_writer = "0.1.3"
 once_cell = "1.15.0"
-#openssl = { version = "0.10.35", features = ["vendored"] }
-#openssl-sys = {version = "0.9.66", features = ["vendored"]}
+openssl = { version = "0.10.35", features = ["vendored"] }
+openssl-sys = {version = "0.9.66", features = ["vendored"]}
