--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.5"
 edition = "2021"
 description = "A quick and easy cache database for you to use!"
 license = "MIT"
-repository = "https://github.com/carghai/RustStore"
+repository = "https://github.com/carghai/CacheStore"
 homepage = "https://carghaiwebsite.web.app/#/"
 
 
